@@ -217,11 +217,11 @@ void pqxx::result::ThrowSQLError(
       if (equal(code, "40000"))
         throw transaction_rollback{Err, Query, code};
       if (equal(code, "40001"))
-        throw serialization_failure{Err, code};
+        throw serialization_failure{Err, Query, code};
       if (equal(code, "40003"))
-        throw statement_completion_unknown{Err, code};
+        throw statement_completion_unknown{Err, Query, code};
       if (equal(code, "40P01"))
-        throw deadlock_detected{Err, code};
+        throw deadlock_detected{Err, Query, code};
       break;
     case '2':
       if (equal(code, "42501"))
